style.css
/* ... */
.scroll-container--modified__menu-container{
  display:flex;
  position: relative;    /* anchors arrows */
  
}

.scroll-container--modified__menu::-webkit-scrollbar {
  display: none; /* hide scrollbar (Chrome, Safari) */
}

.scroll-container--modified__menu-item {
  flex: 0 0 auto;
  margin: 0 5px;
  scroll-snap-align: center;
  text-align: center;
  align-content: center;
  width: 358px;
  height: 218px;
  background-color: #e8e8e8;
  font-size: 37px;
  font-family: 'EB Garamond', serif;
  border: 10px solid rgb(244, 244, 244);
  justify-content: center;
  color: #353535;
}


.scroll-container--modified__directional-button {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  border: none;
  background: rgba(0,0,0,0.5);
  color: white;
  font-size: 2rem;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background 0.3s ease, transform 0.2s ease;
}

.scroll-container--modified__directional-button:hover {
  background: rgba(247, 0, 0, 0.8);
  transform: scale(1.1);
}

/* Critical: position relative to scroll content */
.scroll-container--modified__directional-button.left {
  left: -5%; /* hug the left edge of scroll-menu */
}

.scroll-container--modified__directional-button.right {
  right: -5%; /* hug the right edge of scroll-menu */
}


.flex {
  display:flex;
  width:100vw;
  height:100vh;
}

.flex__section{
  display:flex;
  
  
  /*! margin-left: 3vw; */
  /*! margin-right: 3vw; */
  background-color: white;
}

.flex__section-half-half
{
  width: 50vw;
  height: 50vh;
}
.flex__section-half-full
{
  width: 50vw;
  height: 100vh;
}
.flex__section-full-half
{
  width: 100vw;
  height: 50vh;
}
.flex__section-full-full
{
  width: 100%;
  min-height: 100vh;
}

.flex__dir-col{
  flex-direction:column;
}

.flex__dir-row{
  flex-direction:row;
}

.flex__section-cell{
  position:relative;
  width:100%;
  height:100%;
}


/*
.flex__item-triangle-layout-back[data-flex-id="1"] {
  clip-path: polygon(0 0, 100% 0, 100% 0, 0 100%); 
  background-color:rgba(0, 0, 0, 0.91);
  
  width:100%;
  height:100%;
  border-radius: 140px;
}

.flex__item-triangle-layout-back[data-flex-id="2"] {
  clip-path: polygon(0 100%, 100% 0, 100% 100%, 100% 100%); 
  background-color:rgba(167, 67, 67, 0.91);
  
  width:100%;
  height:100%;
  border-radius: 140px;
}

.flex__item-triangle-layout-back[data-flex-id="3"] {
  clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%); 
  
  background-color:rgba(0, 0, 0, 0.91);
  
  width:100%;
  height:100%;
  border-radius: 140px;
}

.flex__item-triangle-layout-back[data-flex-id="4"] {
  clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 100%); 
  background-color:rgba(167, 67, 67, 0.91);
  
  width:100%;
  height:100%;
  border-radius: 140px;
}
*/
.flex__section-cell .flex__item-triangle img{
  object-fit:cover;
  /*! border-radius: 57px; */
  /*! object-position: center; */
}
.flex__section-cell .flex__item-triangle[data-flex-id="1"] img{
  width:100%;
  height:100%;
  clip-path: polygon(0 0, 100% 0, 50% 50%, 0 0%); 
}
.flex__section-cell .flex__item-triangle[data-flex-id="2"] img{
  width:100%;
  height:100%;
  clip-path: polygon(100% 100%, 100% 0%, 50% 50%, 50% 50%); 
}
.flex__section-cell .flex__item-triangle[data-flex-id="3"] img{
  width:100%;
  height:100%;
  clip-path: polygon(0 0, 50% 50%, 100% 0%, 100% 0%); 
}
.flex__section-cell .flex__item-triangle[data-flex-id="4"] img{
  width:100%;
  height:100%;
  clip-path: polygon(0 0, 0 100%, 50% 50%, 50% 50%);
}





/* RULE OF THUMB left X is half of right X to have the proper distance from the background polygon
.flex__item-triangle-layout-front {
  transform-origin: left; 
  background-color:rgba(149, 178, 106, 0.91);
  width:100%;
  height:100%;
    clip-path: polygon(calc(0% + 2.5%) calc(0% + 5%), calc(100% - 10%) calc(0% + 5%), calc(100% - 10%) calc(0% + 5%),calc(0% + 2.5%) calc(100% - 10%));
    border-radius: 281px;
}*/

.flex__item-triangle-position {
  position:absolute;
  top:0%;;
  left:0%;
  width:100%;
  height:100%;
}

.poster__container{
  width:100%;
  height: 110vh;
  background-color:white;
  padding-top: 16vh;
  padding-bottom: 6.5%;
}

.poster__content {
  width:100%;
  height:100%;
  display:grid;  
  grid-template-rows: 100%;
  grid-template-columns: repeat(2, 1fr);
  position: relative;
}
.poster__text-cell{
  position:relative;
  
  width: 100%;
  height: 100%;
}

.poster__text-content{
  position:absolute;
  top: 50%;
  left: 49%;
  transform:  translateX(-50%) translateY(-50%);;
}

.poster__text-content h1{
  font-size:var(--poster-h1-fontsize);
  font-family: var(--standard-font-family);
  text-align:center;
}
.poster__text-content p {
  font-size:var(--poster-p-fontsize);
  font-family: var(--standard-font-family);
  text-align:center;
}

.poster__text-layout {
  width:100%;
  height:100%;
  
  
}

.poster__image{
  
}

.poster__image img{
  width:100%;
  height:100%;
  object-fit:cover;
}

.reel-promo__container {
  width:100%;
  height: var(--reel-promo-container-height);
  background-color:white;
  /*! outline: 2px solid red; */
  /*! display:flex; */
  /*! justify-content:start; */
  /*! margin-top:10%; */
  display: flex;
  flex-direction:column;
  align-items:center;
  position: relative;
  padding-bottom: 6%;
  padding-top: 6.2%;
}


.reel-promo__content {
  position:relative;
  width: 90%;
  height:100%;
  display:flex;
  justify-content:start;
  /*! outline:2px solid green; */
  /*! margin-left: var(--reel-promo-margin); */
  column-gap: var(--reel-promo-column-gap);
  overflow-x: auto;
  scrollbar-width: none;
  flex: 0 0 auto;
  overflow-y: hidden;
}


.reel-promo__button {
  all:unset;
  display: flex;
  font-size: 3.2rem;
  border: 1px solid black;
  border-radius: 100%;
  width: 3.9vw;
  height:3.9vw;
  justify-content:center;
  align-items:center;
}
.reel-promo__button--left{
  position:absolute;
  left: 0;
  top: 50%;
  transform:translateY(-50%);
}
/* ... */

